fix footer line spacing

--- a/css/uswds.css
+++ b/css/uswds.css
@@ -2911,7 +2911,7 @@ li.usa-footer-primary-content:last-child {
 }
 
 .usa-footer-big ul li {
-  line-height: 2em;
+  line-height: 1.2em;
 }
 
 .usa-footer-big ul .usa-footer-primary-link {
